--- a/gb/19/7/19/n11396484.md
+++ b/gb/19/7/19/n11396484.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>腹部暖了 还能防失智？医师：每天温敷2次</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/warm-stomach2-0719-600x400.jpg" />
 <h6>温暖腹部对于预防失智症和失眠等许多疾病都有益处。(Shutterstock)
 </h6>
 <hr>
-<p>在看诊<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>患者时，我注意到<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8.md#1">腹部</a>、手脚冰冷的人很多。</p>
-<p>尤其<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8.md#1">腹部</a>冰冷的人需要注意。腹腔原本就有30～50毫升的“<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E8%85%B9%E6%B0%B4.md#1">腹水</a>”，内脏浮于腹水中，免于受到外部的冲击。</p>
+<p>在看诊<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>患者时，我注意到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8.md#1">腹部</a>、手脚冰冷的人很多。</p>
+<p>尤其<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%85%B9%E9%83%A8.md#1">腹部</a>冰冷的人需要注意。腹腔原本就有30～50毫升的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%85%B9%E6%B0%B4.md#1">腹水</a>”，内脏浮于腹水中，免于受到外部的冲击。</p>
 <p>不觉得好像在那里听过类似的情况吗？没错，跟脑与脑脊髓液是同样的关系。</p>
-<p><ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E8%85%B9%E6%B0%B4.md#1">腹水</a>与脑室产生的脑脊髓液同为水，会在体内相互循环。换句话说，<span style="color: #800000;"><strong>若腹部冰冷使腹水的循环变差，脑脊髓液的循环也会跟着变差，结果容易发生<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%A4%B1%E7%9C%A0.md#1">失眠</a>、<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>。</strong></span></p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%85%B9%E6%B0%B4.md#1">腹水</a>与脑室产生的脑脊髓液同为水，会在体内相互循环。换句话说，<span style="color: #800000;"><strong>若腹部冰冷使腹水的循环变差，脑脊髓液的循环也会跟着变差，结果容易发生<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%B1%E7%9C%A0.md#1">失眠</a>、<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>。</strong></span></p>
 <p>因此，温暖腹部，促进腹水流动，是非常重要的事情。</p>
 <p><span style="color: #333333;">温暖腹部还有其他好处。</span></p>
 <p>肚子里头有胃、肠、肾脏等重要器官，温暖腹部可维持这些器官的机能。尤其能够促进胃液的分泌，增进食欲。我们可从饮食补充必要的营养，能够增进免疫力，让身体不容易生病。</p>
@@ -17,9 +17,9 @@
 <p>另外，肚子里头还有肾上腺这个器官，温暖腹部能够促进荷尔蒙分泌。肾上腺会分泌肾上腺素、去甲肾上腺素（旧称：正肾上腺素）、皮质醇等与疲劳有关的荷尔蒙，所以不容易感到疲劳。</p>
 <p>如果腹部冰冷让肾上腺的机能下降，甲状腺会过度活跃。若持续低温状态，这次会换成甲状腺机能下降，造成全身细胞无法顺利运作，出现容易疲劳、倦怠无力等症状。女性也有可能提早出现更年期症状。</p>
 <p>低温会使内脏机能下降，说腹水冰冷会让人生病也不为过。健康长寿的人，大家的体温都偏高。而且，他们的食欲也较旺盛。</p>
-<p><span style="color: #800000;"><strong>请每天用<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%83%AD%E6%B0%B4%E8%A2%8B.md#1">热水袋</a>温暖腹部两次，预防失智症与其他疾病的发生。</strong></span></p>
-<p>温暖腹部的方法有围腰带、使用<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%83%AD%E6%B0%B4%E8%A2%8B.md#1">热水袋</a>、怀炉等，哪一种都没关系，请依照自己方便选择。</p>
-<figure id="attachment_11396579" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/07/hot-water-bag_1361703329.jpg"><img class="size-large wp-image-11396579" src="https://i.epochtimes.com/assets/uploads/2019/07/hot-water-bag_1361703329-600x400.jpg" alt="热水袋的使用基准为每天20～30分钟两次。白天一次、夜晚一次，温暖腹部再睡觉。(Shutterstock)" width="600" b="400" /></a><figcaption class="wp-caption-text">热水袋每天使用20～30分钟两次。白天一次、夜晚一次，温暖腹部再睡觉。(Shutterstock)</figcaption></figure>
+<p><span style="color: #800000;"><strong>请每天用<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%AD%E6%B0%B4%E8%A2%8B.md#1">热水袋</a>温暖腹部两次，预防失智症与其他疾病的发生。</strong></span></p>
+<p>温暖腹部的方法有围腰带、使用<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%AD%E6%B0%B4%E8%A2%8B.md#1">热水袋</a>、怀炉等，哪一种都没关系，请依照自己方便选择。</p>
+<figure id="attachment_11396579" aria-describedby="caption-attachment-11396579" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/hot-water-bag_1361703329.jpg"><img class="size-large wp-image-11396579" src="https://i.epochtimes.com/assets/uploads/2019/07/hot-water-bag_1361703329-600x400.jpg" alt="热水袋的使用基准为每天20～30分钟两次。白天一次、夜晚一次，温暖腹部再睡觉。(Shutterstock)" width="600" b="400" /></a><figcaption id="caption-attachment-11396579" class="wp-caption-text">热水袋每天使用20～30分钟两次。白天一次、夜晚一次，温暖腹部再睡觉。(Shutterstock)</figcaption></figure>
 <p>我会建议能够确实温暖腹部的热水袋。<strong><span style="color: #800000;">热水袋的使用基准为每天20～30分钟两次。白天一次、夜晚一次，温暖腹部再睡觉，是比较正统的做法。</span></strong></p>
 <p>用热水袋温暖腹部并不仅限于冬天，<span style="color: #800000;"><strong>若年过六十，即便是夏天也可全年无休这么做。</strong></span></p>
 <p>顺便一提，有一种说法是“头寒足热”最健康，但我认为无论大人小孩“全身上下都要做好保暖”。</p>
@@ -27,51 +27,56 @@
 <p>除了缓解颈部之外，冬天寒冷外出时，建议戴个帽子保暖头部吧。</p>
 <p>在冲绳有“海水温热疗法”，使用冲绳近海干净的海水蒸热毛巾，热敷在身上提高免疫力。这个绝佳温热疗法能够从头部温热到脚部前端，我会推荐给患者用来预防失智症。</p>
 <p>&lt;摘自《捏捏脖子防失智》 世茂出版&gt;</p>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/wlrgim293/djy/blob/master/gb/19/5/2/n11230042.md#1" target="_blank" rel="noopener noreferrer">失智和健忘的区别？出现3类症状 当心失智症</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/10/n10966360.md#1" target="_blank" rel="noopener noreferrer">多吃10种健脑食物 麦得饮食让大脑年轻7岁</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/wlrgim293/djy/blob/master/gb/19/3/7/n11096407.md#1" target="_blank" rel="noopener noreferrer">5个方法让大脑变年轻 预防失智症</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/2/n11230042.md#1" target="_blank" rel="noopener noreferrer">失智和健忘的区别？出现3类症状 当心失智症</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/10/n10966360.md#1" target="_blank" rel="noopener noreferrer">多吃10种健脑食物 麦得饮食让大脑年轻7岁</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/7/n11096407.md#1" target="_blank" rel="noopener noreferrer">5个方法让大脑变年轻 预防失智症</a></span></h3>
 <p>责任编辑：李清风</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/17/n10789940.md#1">睡眠调整后 6个月减重60公斤 失智也和它有关</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/23/n10801985.md#1">反应慢健忘当心“脑雾” 1个好习惯疗愈脑力</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/4/26/n11215433.md#1">坚持每天做1小时家务 可挽救1年脑容量损失</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/5/9/n11245540.md#1">这一种失智症 是极有可能治愈的</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/5/29/n11286699.md#1">65岁以上患病率九分之一 阿兹海默症专家：做好预防</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/6/10/n11313380.md#1">一个走出湖南大山坳女子的求法之路</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948027.md#1">薰衣草精油抗菌、舒缓烫伤  教你实用用法</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/16/n11943245.md#1">肺炎病毒大流行 上超市购物的自保法则</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/14/n11940688.md#1">茶树精油：强力抗病菌、抗炎 3种热门用法</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/11/n11932914.md#1">睡姿不对 脊椎出问题 教你正确睡姿养脊椎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/17/n10789940.md#1">睡眠调整后 6个月减重60公斤 失智也和它有关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/23/n10801985.md#1">反应慢健忘当心“脑雾” 1个好习惯疗愈脑力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/4/26/n11215433.md#1">坚持每天做1小时家务 可挽救1年脑容量损失</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/9/n11245540.md#1">这一种失智症 是极有可能治愈的</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/29/n11286699.md#1">65岁以上患病率九分之一 阿兹海默症专家：做好预防</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/10/n11313380.md#1">一个走出湖南大山坳女子的求法之路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676347.md#1">褪黑激素提升记忆力、改善失智 什么时间补充？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/23/n13667301.md#1">地震第一时间往外逃是错的？4种行为最危险</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/8/n11575471.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（上）</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/19/n11396484.htm">腹部暖了 还能防失智？医师：每天温敷2次</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/19/n11396484.htm">腹部暖了 还能防失智？医师：每天温敷2次</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/19/7/19/n11396484.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/7/19/n11396484.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
